# ridesense

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: default.yaml
src/: main.cpp
src/analytics/: event.h  event_detector.cpp  event_detector.h  metrics_collector.cpp  metrics_collector.h
src/capture/: camera_stream.cpp  camera_stream.h  frame.h  gps_stream.cpp  gps_stream.h  imu_stream.cpp  imu_stream.h  stream.h
src/common/: config.cpp  config.h  logger.cpp  logger.h
src/fusion/: ekf.cpp  ekf.h  pose_fusion.cpp  pose_fusion.h  vehicle_state.cpp  vehicle_state.h
src/network/: state_broadcaster.cpp  state_broadcaster.h  state_message.h  state_server.cpp  state_server.h  video_server.cpp  video_server.h
src/perception/: lane_detector.cpp  lane_detector.h  object_detector.cpp  object_detector.h  slam_processor.cpp  slam_processor.h
src/replay/: replay_controller.cpp  replay_controller.h  replay_reader.cpp  replay_reader.h
src/services/: service.h  service_manager.h
src/storage/: frame_logger.cpp  frame_logger.h
src/sync/: resampler.cpp  resampler.h  time_aligner.cpp  time_aligner.h  timestamp_sync.cpp  timestamp_sync.h
ui/: dashboard.js  index.html  style.css  ws_bridge.py
